2020-05-27 13:48, latest updates, using Python to commit

--- a/frontend/htmlTemplates/mainIndex.html
+++ b/frontend/htmlTemplates/mainIndex.html
@@ -12,7 +12,7 @@
 	<div>
 		<div id=divTitle>
 			<div style="font-size: 20px">Welcome to</div>
-			<div>DOLPHIN</div>
+			<div>DolphinStage</div>
 			<div><img src="frontend/assets/dolphinW.png" width="90"></div>
 	</div>
 	<div id=divBody>
