2020-05-27 13:57, latest updates, using Python to commit

--- a/frontend/htmlTemplates/mainIndex.html
+++ b/frontend/htmlTemplates/mainIndex.html
@@ -4,6 +4,7 @@
 <head>
 	<title>Dolphin</title>
 	<meta charset="utf-8" />
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
 	<link rel="stylesheet" type="text/css" href="frontend/css/styles.css">
 	<!-- <link rel="shortcut icon" href="frontend/assets/favicon.ico"> -->
 </head>
@@ -12,7 +13,7 @@
 	<div>
 		<div id=divTitle>
 			<div style="font-size: 20px">Welcome to</div>
-			<div>DolphinStage</div>
+			<div>Blue Dolphin</div>
 			<div><img src="frontend/assets/dolphinW.png" width="90"></div>
 	</div>
 	<div id=divBody>
