--- a/frontend/htmlTemplates/mainIndex.html
+++ b/frontend/htmlTemplates/mainIndex.html
@@ -17,7 +17,10 @@
 			<div><img src="frontend/assets/dolphinW.png" width="90"></div>
 	</div>
 	<div id=divBody>
+		<div>Select an app:</div>
 		<a href="frontend/apps/starWarsCharacters/htmlFiles/index.html">Star Wars Characters</a>
+		<a href="http://herokuhellonode.herokuapp.com/">Hello App, with Node backend, hosted by Heroku</a>
+		<a href="frontend/apps/starWarsCharacters/htmlFiles/index.html">Hello App, with Node backend, hosted by Heroku</a>
 	</div>
 
 </body>
