2020-05-27 14:26, latest updates, using Python to commit

--- a/frontend/htmlTemplates/mainIndex.html
+++ b/frontend/htmlTemplates/mainIndex.html
@@ -18,9 +18,10 @@
 	</div>
 	<div id=divBody>
 		<div>Select an app:</div>
-		<a href="frontend/apps/starWarsCharacters/htmlFiles/index.html">Star Wars Characters</a>
-		<a href="http://herokuhellonode.herokuapp.com/">Hello App, with Node backend, hosted by Heroku</a>
-		<a href="frontend/apps/starWarsCharacters/htmlFiles/index.html">Hello App, with Node backend, hosted by Heroku</a>
+		<p></p>
+		<div><a href="frontend/apps/starWarsCharacters/htmlFiles/index.html">Star Wars Characters</a></div>
+		<div><a href="http://herokuhellonode.herokuapp.com/">Hello App, with Node backend, hosted by Heroku</a></div>
+		<div><a href="frontend/apps/starWarsCharacters/htmlFiles/index.html">Hello App, with Node backend, hosted by Heroku</a></div>
 	</div>
 
 </body>
