2020-05-27 15:14, latest updates, using Python to commit

--- a/frontend/htmlTemplates/mainIndex.html
+++ b/frontend/htmlTemplates/mainIndex.html
@@ -19,9 +19,9 @@
 	<div id=divBody>
 		<div>Select an app:</div>
 		<p></p>
-		<div><a href="frontend/apps/starWarsCharacters/htmlFiles/index.html">Star Wars Characters</a></div>
-		<div><a href="http://herokuhellonode.herokuapp.com/">Hello App, with Node backend, hosted by Heroku</a></div>
-		<div><a href="frontend/apps/starWarsCharacters/htmlFiles/index.html">Hello App, with Node backend, hosted by Heroku</a></div>
+		<div class="divListItem"><a href="frontend/apps/starWarsCharacters/htmlFiles/index.html">Star Wars Characters</a></div>
+		<div class="divListItem"><a href="http://herokuhellonode.herokuapp.com/">Hello, with Node backend, hosted by Heroku</a></div>
+		<div class="divListItem"><a href="frontend/apps/starWarsCharacters/htmlFiles/index.html">Hello, with Node backend, hosted by Heroku</a></div>
 	</div>
 
 </body>
