--- a/frontend/htmlTemplates/mainIndex.html
+++ b/frontend/htmlTemplates/mainIndex.html
@@ -18,10 +18,9 @@
 	</div>
 	<div id=divBody>
 		<div>Select an app:</div>
-		<p></p>
 		<div class="divListItem"><a href="frontend/apps/starWarsCharacters/htmlFiles/index.html">Star Wars Characters</a></div>
-		<div class="divListItem"><a href="http://herokuhellonode.herokuapp.com/">Hello, with Node backend, hosted by Heroku</a></div>
-		<div class="divListItem"><a href="frontend/apps/starWarsCharacters/htmlFiles/index.html">Hello, with Node backend, hosted by Heroku</a></div>
+		<div class="divListItem"><a href="http://herokuhellonode.herokuapp.com/">Hello (node backend, hosted by Heroku)</a></div>
+		<div class="divListItem"><a href="frontend/apps/starWarsCharacters/htmlFiles/index.html">Hello (python backend, hosted by Heroku)</a></div>
 	</div>
 
 </body>
