--- a/frontend/htmlTemplates/mainIndex.html
+++ b/frontend/htmlTemplates/mainIndex.html
@@ -21,7 +21,7 @@
 		<p></p>
 		<div class="divListItem"><a href="frontend/apps/starWarsCharacters/htmlFiles/index.html">Star Wars Characters</a></div>
 		<div class="divListItem"><a href="http://herokuhellonode.herokuapp.com/">Hello (hosted by Heroku, node backend)</a></div>
-		<div class="divListItem"><a href="http://herokuhellonode.herokuapp.com/">Hello (hosted by Heroku, python backend)</a></div>
+		<div class="divListItem"><a href="http://herokuhellojavascript.herokuapp.com/">Hello (hosted by Heroku, python backend)</a></div>
 	</div>
 
 </body>
