2020-05-27 16:36, latest updates, using Python to commit

--- a/frontend/htmlTemplates/mainIndex.html
+++ b/frontend/htmlTemplates/mainIndex.html
@@ -20,8 +20,8 @@
 		<div>Select an app:</div>
 		<p></p>
 		<div class="divListItem"><a href="frontend/apps/starWarsCharacters/htmlFiles/index.html">Star Wars Characters</a></div>
-		<div class="divListItem"><a href="http://herokuhellonode.herokuapp.com/">Hello (hosted by Heroku, node backend)</a></div>
-		<div class="divListItem"><a href="http://herokuhellopython.herokuapp.com/">Hello (hosted by Heroku, python backend)</a></div>
+		<div class="divListItem"><a href="http://herokuhellonode.herokuapp.com/">Hello! (hosted by Heroku, node backend)</a></div>
+		<div class="divListItem"><a href="http://herokuhellopython.herokuapp.com/">Hola! (hosted by Heroku, python backend)</a></div>
 	</div>
 
 </body>
